my Django Girls app, first commit

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,7 +8,7 @@
 						
 					<div class="row">
 						<div class="col-xs-12 col-sm-4 col-md-4" style="margin-top: 40px;">
-							<img src="http://www.educelerate.com/wp-content/uploads/2012/11/Educelerate-3002-280x280.png" class="img-responsive" />
+							<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQFtLkZ3K2onvfE7xhK37SSaEMesyWlVJTN2kp8fJ6ITV6MpMnwdyGcuDY" class="img-responsive" alt="280x280" />
 						</div>
 						<div class="col-xs-12 col-sm-8 col-md-8">
 							<div class="date">
