--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -35,7 +35,13 @@
 					</li>
 					<li><a href="#">Empresa</a></li>
 					<li><a href="#">Contato</a></li>
+					{% if user.is_authenticated %}
 					<li><a href="{% url 'blog.views.post_new' %}"><span class="glyphicon glyphicon-plus"></span></a></li>
+					<li><a href="{% url 'post_draft_list' %}"<span class="glyphicon glyphicon-edit"></span></a></li>
+					<li><p>Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p></li>
+					{% else %}
+					<li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-lock"></span></a></li>
+					{% endif %}
 				</ul>
 				<form class="navbar-form navbar-right" role="search">
 					<div class="form-group"><input class="form-control" type="text" placeholder="Pesquisar" />
