--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -11,8 +11,14 @@
 			<div class="col-xs-12 col-sm-8 col-md-8">
 				<div class="post">
 					<div class="date">
-				        <p>published: {{ post.published_date }}</p>
+						{% if post.published_date %}
+							{{ post.published_date }}
 					</div>
+						{% else %}
+							<a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">publicar</a>
+						{% endif %}
+				        
+				<a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>	
 				<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 				<h1>{{ post.titulo }}</h1>
 				<p> {{ post.testo|linebreaksbr }}
