--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -9,3 +9,13 @@ h1 a {
 .post-form textarea, .post-form  input {
 	width: 100%;
 }
+.comment {
+	margin: 20px 20px 20px 20px;
+}
+
+ul li p {
+	color: #ffffff;
+}
+#button {
+	background-color: #ffffff;
+}
