--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,10 +12,10 @@
 		<title> blog em django</title>
 	</head>
 <body>
-	<nav class="navbar navbar-default" role="navigation">
+	<nav class="navbar navbar-inverse" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
-				<button  class="navbar-toggle" type="button" data-toggle="collapse" data-target="#bs-exemple-navbar-collapse-1">
+				<button  id="button" class="navbar-toggle" type="button" data-toggle="collapse" data-target="#bs-exemple-navbar-collapse-1">
 					<span class="sr-only">Toggle navigation</span>
 				</button>
 				<a class="navbar-brand" href="#">Menu Site</a>
@@ -38,7 +38,7 @@
 					{% if user.is_authenticated %}
 					<li><a href="{% url 'blog.views.post_new' %}"><span class="glyphicon glyphicon-plus"></span></a></li>
 					<li><a href="{% url 'post_draft_list' %}"<span class="glyphicon glyphicon-edit"></span></a></li>
-					<li><p>Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p></li>
+					<li><p id="log">Hello {{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p></li>
 					{% else %}
 					<li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-lock"></span></a></li>
 					{% endif %}
