--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -23,6 +23,23 @@
 				<h1>{{ post.titulo }}</h1>
 				<p> {{ post.testo|linebreaksbr }}
 				</div>
+				<hr />
+				<a  class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">add comentário</a>
+				{% for comment in post.comments.all %}
+					{% if user.is_authenticated or comment.approved_comment %}
+						<div class='comment'>
+							<div class="date">{{ comment.created_date }}</div>
+							{% if not comment.approved_comment %}
+								<a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+								<a class="btn btn-default" href="{% url 'comment_approved' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+							{% endif %}
+							<strong>{{ comment.author }}</strong>
+							<p>{{ comment.testo|linebreaks }}
+						</div>
+					{% endif %}
+				{% empty %}
+					<p> No comments here yes :(</p>
+				{% endfor %}
 			</div>
 	</div>
 					
